add swagger comment
